Add create food & get food items routes & controllers

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "bcryptjs": "^3.0.3",
-    "cookie-parser": "^1.4.7",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.4"
-  }
+    "name": "backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "dev": "dotenvx run -f .env.development -- nodemon server.js",
+        "dev:env:encrypt": "dotenvx encrypt -f .env.development",
+        "dev:env:decrypt": "dotenvx decrypt -f .env.development"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "module",
+    "dependencies": {
+        "@imagekit/nodejs": "^7.1.1",
+        "bcryptjs": "^3.0.3",
+        "cookie-parser": "^1.4.7",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^8.19.4",
+        "morgan": "^1.10.1",
+        "multer": "^2.0.2",
+        "uuid": "^13.0.0"
+    },
+    "devDependencies": {
+        "@dotenvx/dotenvx": "^1.51.1",
+        "nodemon": "^3.1.11"
+    }
 }
